<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.maydaybonito.basicspanishfortourist.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/login_article"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/LoginArticletextView"
                android:layout_weight="1"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="@dimen/h1" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/usernamTextView"
                android:textSize="@dimen/h2" />

            <EditText
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/usernameTxt"
                android:layout_width="match_parent"
                android:textSize="@dimen/h2"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/passwordTextView"
                android:textSize="@dimen/h2"
                android:text="@string/password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:id="@+id/passwordTxt"
                android:layout_weight="1"
                android:textSize="@dimen/h2"
                android:inputType="textPassword" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loginBtn"
                android:layout_weight="0.48"
                android:text="@string/loginBtn"
                android:onClick="click2MainMenuPage"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/registerTextView"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:text="@string/forgetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/forgetpassTextView"
                android:layout_weight="1"
                android:textAlignment="center" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:text="@string/loginFBBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginFBBtn" />

            <Button
                android:text="@string/loginGoogleBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginGoogleBtn" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
